--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: lprint
 base: core18
-version: 1.0
+version: "1.0"
 summary: A Label Printer Application
 description: |
    LPrint implements printing for a variety of common label and receipt printers
