--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: lprint
-base: core18
-version: "1.0"
+base: core20
+version: "1.1"
 summary: A Label Printer Application
 description: |
    LPrint implements printing for a variety of common label and receipt printers
@@ -26,13 +26,20 @@ icon: static-resources/lprint.png
 apps:
     lprint:
         command: bin/lprint
-        plugs: [avahi-observe, home, network, network-bind, raw-usb]
+        plugs: [avahi-control, home, network, network-bind, network-manager, raw-usb]
 
 parts:
-    main:
+    pappl:
+        plugin: autotools
+        configflags: [--enable-libjpeg,--enable-libpng,--enable-libusb,--with-dnssd=avahi]
+        source: https://github.com/michaelrsweet/pappl/releases/download/v1.1.0/pappl-1.1.0.tar.gz
+        build-packages: [libavahi-client-dev, libcups2-dev, libcupsimage2-dev, libgnutls28-dev, libjpeg8-dev, libpam-dev, libpng-dev, libusb-1.0-0-dev, zlib1g-dev]
+        stage-packages: [libavahi-client3, libcups2, libcupsimage2, libjpeg8, libpng16-16, libusb-1.0-0]
+
+    lprint:
         plugin: autotools
         configflags: [--enable-libpng,--enable-libusb,--with-dnssd=avahi]
         source: .
+        after: [pappl]
         build-packages: [libavahi-client-dev, libcups2-dev, libcupsimage2-dev, libgnutls28-dev, libpng-dev, libusb-1.0-0-dev, zlib1g-dev]
         stage-packages: [libavahi-client3, libcups2, libcupsimage2, libpng16-16, libusb-1.0-0]
-
