New autotools-configure-parameters property replaces configflags in core20.

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -31,14 +31,14 @@ apps:
 parts:
     pappl:
         plugin: autotools
-        configflags: [--enable-libjpeg,--enable-libpng,--enable-libusb,--with-dnssd=avahi]
+        autotools-configure-parameters: [--enable-libjpeg,--enable-libpng,--enable-libusb,--with-dnssd=avahi]
         source: https://github.com/michaelrsweet/pappl/releases/download/v1.1.0/pappl-1.1.0.tar.gz
         build-packages: [libavahi-client-dev, libcups2-dev, libcupsimage2-dev, libgnutls28-dev, libjpeg8-dev, libpam-dev, libpng-dev, libusb-1.0-0-dev, zlib1g-dev]
         stage-packages: [libavahi-client3, libcups2, libcupsimage2, libjpeg8, libpng16-16, libusb-1.0-0]
 
     lprint:
         plugin: autotools
-        configflags: [--enable-libpng,--enable-libusb,--with-dnssd=avahi]
+        autotools-configure-parameters: [--enable-libpng,--enable-libusb,--with-dnssd=avahi]
         source: .
         after: [pappl]
         build-packages: [libavahi-client-dev, libcups2-dev, libcupsimage2-dev, libgnutls28-dev, libpng-dev, libusb-1.0-0-dev, zlib1g-dev]
