--- a/configure.ac
+++ b/configure.ac
@@ -184,6 +184,13 @@ AS_IF([test -n "$GCC"], [
     AS_CASE(["$host_os_name"],
     [linux*], [
 	CPPFLAGS="$CPPFLAGS -D__USE_MISC -D_TIME_BITS=64"
+    ], [darwin*], [
+        AS_IF([test "$host_os_version" -ge 200 -a x$enable_debug != xyes], [
+            # macOS 11.0 and higher support the Apple Silicon (arm64) CPUs
+	    OPTIM="$OPTIM -mmacosx-version-min=10.14 -arch x86_64 -arch arm64"
+	], [test x$enable_debug != xyes], [
+	    OPTIM="$OPTIM -mmacosx-version-min=10.14 -arch x86_64"
+	])
     ])
 ])
 
