--- a/Makefile.in
+++ b/Makefile.in
@@ -1,7 +1,7 @@
 #
 # Makefile for LPrint, a Label Printer Application
 #
-# Copyright © 2019-2021 by Michael R Sweet
+# Copyright © 2019-2022 by Michael R Sweet
 #
 # Licensed under Apache License v2.0.  See the file "LICENSE" for more
 # information.
@@ -131,7 +131,7 @@ install:	all
 	    echo "Installing launchd service to $(BUILDROOT)/Library/LaunchDaemons..."; \
 	    $(INSTALL) -d -m 755 $(BUILDROOT)/Library/LaunchDaemons; \
 	    $(INSTALL) -c -m 644 org.msweet.lprint.plist $(BUILDROOT)/Library/LaunchDaemons; \
-	elif test x$unitdir != x; then \
+	elif test "x$(unitdir)" != x; then \
 	    echo "Installing systemd service to $(BUILDROOT)$(unitdir)..."; \
 	    $(INSTALL) -d -m 755 $(BUILDROOT)$(unitdir); \
 	    $(INSTALL) -c -m 644 lprint.service $(BUILDROOT)$(unitdir); \
