configure.ac: Set exec_prefix to prefix if missing (fixes #80)
If --exec-prefix is not passed as an configuration option, exec_prefix
is NONE and thus is not expanded. Use the prefix variable in that case.

--- a/configure.ac
+++ b/configure.ac
@@ -59,6 +59,16 @@ AS_IF([test $prefix = NONE], [
     prefix=$ac_default_prefix
 ], [])
 
+dnl Fix "exec_prefix" variable if it hasn't been specified...
+AS_IF([test "$exec_prefix" = "NONE"], [
+    exec_prefix="$prefix"
+])
+
+dnl Fix "bindir" variable...
+AS_IF([test "$bindir" = "\${exec_prefix}/bin"], [
+    bindir="$exec_prefix/bin"
+])
+
 
 dnl Standard programs...
 AC_PROG_CC
