Add missing math library.

--- a/Makefile.in
+++ b/Makefile.in
@@ -29,7 +29,7 @@ CPPFLAGS	=	@CPPFLAGS@
 CSFLAGS		=	-s "$${CODESIGN_IDENTITY:=-}" --timestamp @CSFLAGS@
 INSTALL		=	@INSTALL@
 LDFLAGS		=	@LDFLAGS@ $(OPTIM)
-LIBS		=	@LIBS@
+LIBS		=	@LIBS@ -lm
 MKDIR		=	@MKDIR@ -p
 OPTIM		=	@OPTIM@
 RANLIB		=	@RANLIB@
