Add checks to sscanf calls and disable a truly useless CodeQL query.

--- a/.github/codeql.yml
+++ b/.github/codeql.yml
@@ -13,3 +13,5 @@ query-filters:
       id: cpp/tainted-format-string
   - exclude:
       id: cpp/toctou-race-condition
+  - exclude:
+      id: cpp/commented-out-code
