Add snap server script.

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -34,7 +34,7 @@ apps:
         plugs: [avahi-control, home, network, network-bind, network-manager, raw-usb]
 
     lprint-server:
-        command: /bin/lprint server -o log-file=syslog
+        command: /bin/lprint=-server
         daemon: simple
         plugs: [avahi-control, home, network, network-bind, network-manager, raw-usb]
 
@@ -46,10 +46,16 @@ parts:
         build-packages: [libavahi-client-dev, libcups2-dev, libcupsimage2-dev, libgnutls28-dev, libjpeg8-dev, libpam-dev, libpng-dev, libusb-1.0-0-dev, zlib1g-dev]
         stage-packages: [libavahi-client3, libcups2, libcupsimage2, libjpeg8, libpng16-16, libusb-1.0-0]
 
+    scripts:
+        plugin: dump
+        source: .
+        organize:
+          lprint-server: bin/
+
     lprint:
         plugin: autotools
         autotools-configure-parameters: [--prefix=/]
         source: .
-        after: [pappl]
+        after: [pappl, scripts]
         build-packages: [libavahi-client-dev, libcups2-dev, libcupsimage2-dev, libgnutls28-dev, libpng-dev, libusb-1.0-0-dev, zlib1g-dev]
         stage-packages: [libavahi-client3, libcups2, libcupsimage2, libpng16-16, libusb-1.0-0]
